feat(matrices) fix: matrix swagger docs
